# vigistock

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
dashboards/grafana/alerting/: coldchain_alerts.yml
dashboards/grafana/dashboards/: coldchain.json  shortage.json
dashboards/streamlit/: Dockerfile  app.py
dashboards/streamlit/.streamlit/: config.toml
dashboards/streamlit/lib/: __init__.py  components.py  data.py  icons.py  live_data.py  llm_logic.py  mock_data.py  settings.py  style.py  theme.py
dashboards/streamlit/views/: 01_overview.py  02_cold_chain.py  03_shortage_forecast.py  04_clinical_copilot.py  05_validation.py  08_about.py  (+2 more)
ingestion/: __init__.py  config.py  main.py
ingestion/ansm/: extractor.py
ingestion/fda/: extractor.py
ingestion/openfda/: extractor.py
ingestion/openprescribing/: extractor.py
ingestion/utils/: db.py  http.py
llm/: __init__.py
llm/indexer/: chunker.py  run.py
llm/rag/: brief.py  client.py  retriever.py  validator.py
orchestration/: Dockerfile
orchestration/dagster/: definitions.py  schedules.py  sensors.py  workspace.yaml
protocols/seed/: README.md  antibiotics_substitution.md  insulin_substitution.md  vaxflu_j_substitution.md
streaming/: __init__.py  anomaly.py  consumer.py
tests/: conftest.py
tests/integration/: conftest.py  test_forecast_writes.py  test_ingest_bronze.py  test_schema.py  test_streaming_smoke.py
tests/unit/: test_anomaly_detector.py  test_apply_schema.py  test_chunker.py  test_forecast_features.py  test_fridge_physics.py  test_ingestion_config.py  test_rag_validator.py
(+7 files in other folders)
